--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-hacker
+theme: jekyll-theme-architect
 title: Unstable Design Lab
 description: Documentation for Smart Textiles Prototypes
