--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-architect
-title: Unstable Design Lab
-description: Documentation for Smart Textiles Prototypes
+theme: minimal
+title: Computational Textile Craft Resources
+description: Weaving drafts, software, how-tos, and PCB files to re-create prototype that were made in the Unstable Design Lab. 
