--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Computational Textile Craft Resources
-description: Weaving drafts, software, how-tos, and PCB files to re-create prototype that were made in the Unstable Design Lab. 
+description: weaving drafts, software, how-tos, and PCB files to create prototypes designed by the Unstable Design Lab. 
 
