--- a/_config.yml
+++ b/_config.yml
@@ -1,12 +1,12 @@
 # Site
 name: "AdaCAD"
 title: "AdaCAD"
-description: "An Experimental Drafting Tool for Experimental Weavers"
+description: "Experimental Drafting Tools for Experimental Weavers"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-baseurl: '/'
+# baseurl: '/'
+baseurl: '/test'
 google_analytics: 'G-KEPD0M7RN1'
-disqus: 'https-unstabledesign-github-io-adacad'
 mailchimp-list: 'http://eepurl.com/g8hWjD'
 include: ["_pages"]
 permalink: /:title/
