--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ title: "AdaCAD"
 description: "Experimental Drafting Tools for Experimental Weavers"
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/logo.png'
-# baseurl: '/'
-baseurl: '/test'
+baseurl: '/'
+# baseurl: '/test'
 google_analytics: 'G-KEPD0M7RN1'
 mailchimp-list: 'http://eepurl.com/g8hWjD'
 include: ["_pages"]
